# minimal-examples

./: .gitignore  Makefile  README  abstract-derived-data-container.cpp  abstract-derived-data-template-container.cpp  boost-ptr-containers.cpp  boost-uuid-name-generator.cpp  inherit-from-template-class.cpp  multimap-sharedptr.cpp  ogre-init.cpp  shared-ptr.cpp
benchmark-containers/: Makefile  main.cpp
cmake-multiple-projects-flat/: CMakeLists.txt
cmake-multiple-projects-flat/exe/: CMakeLists.txt  main.cpp
cmake-multiple-projects-flat/lib/: libadd.hpp
cmake-multiple-projects-stacked/: CMakeLists.txt  Makefile
cmake-multiple-projects-stacked/exe/: CMakeLists.txt
cmake-multiple-projects-stacked/lib/: CMakeLists.txt  libadd.cpp
cmake-qt-metaobject/: CMakeLists.txt  header.hpp  main.cpp
cmake-qt-metastuff/: CMakeLists.txt  Component.cpp  Component.hpp  Makefile  Node.cpp  Node.hpp  SpecializedComponent.cpp  SpecializedComponent.hpp  main.cpp
cmake-qt-project/: CMakeLists.txt  header.hpp  main.cpp
cmake-qt-yaml/: CMakeLists.txt  Makefile  header.hpp  main.cpp
cmake-simple/: CMakeLists.txt  main.cpp
src/: abstract-derived-data-any-container.cpp  abstract-derived-data.cpp  boost-hash.cpp  const-reference-member.cpp  inherit-from-template-class-2.cpp  ncurses-chat.cpp  reinterpret.cpp  sfml-clock.cpp  sfml-handle.cpp  shared_ptr-casting.cpp  vector-leak-shared_ptr.cpp  vector-leak.cpp
yaml-node-component/: CMakeLists.txt  Component.cpp  Component.hpp  ComponentA.cpp  ComponentA.hpp  ComponentB.cpp  ComponentB.hpp  Makefile  Node.cpp  Node.hpp  main.cpp
